# GLFont

./: .gitignore  CMakeLists.txt  README.md  glfont.cpp  glfont.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  shader.cpp  shader.h
lib/debug/: freetyped.lib
lib/release/: freetype.lib
